--- a/r_programming_notes.html
+++ b/r_programming_notes.html
@@ -369,18 +369,25 @@ summary {
 </div>
 
 
-<div id="r-markdown" class="section level2">
-<h2>R Markdown</h2>
-<p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
-<pre class="r"><code>summary(cars)</code></pre>
-<pre><code>##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00</code></pre>
+<div id="r-programming-notes" class="section level2">
+<h2>R programming notes</h2>
+<p>This file contains notes concerning R programming. Mainly messing around with command and data.</p>
+<pre class="##code"><code>
+##assign a vector, in this case a sequence of integers
+x &lt;- 1:20
+print(x)
+
+##casting a number as integer
+y &lt;-1L
+print(y)
+
+##creating a numeric vector
+z &lt;- vector(&quot;numeric&quot;, length =10)
+print(z)
+
+
+
+</code></pre>
 </div>
 <div id="including-plots" class="section level2">
 <h2>Including Plots</h2>
